Fixes #23 - The centralization of SVG elements and titles has been fixed. I took advantage and increased the spacing in the titles. I hope this helps.

--- a/style/main.css
+++ b/style/main.css
@@ -1,13 +1,13 @@
 body {
   background: white;
-  font-family: "Spectral", serif;
+  font-family: 'Spectral', serif;
   color: white;
   font-weight: 400;
   font-size: 20px;
 }
 
 .wrapper {
-  width: 80%;
+  width: 80rem;
   border-radius: 10px;
   padding: 30px;
   background: rgb(29, 17, 78);
@@ -16,14 +16,14 @@ body {
 }
 
 #h1 {
-	font-family: Comic Sans MS, sans-serif;
-	color: white;
-	font-size: 2.5rem;
-	text-shadow: 9px 7px 19px rgba(255, 106, 106, 0.575);
-	text-align: left;
-	padding: 10px;
-	border: 5px solid rgba(233, 20, 151, 0.575);
-	background-color: rgb(29, 17, 78)
+  font-family: Comic Sans MS, sans-serif;
+  color: white;
+  font-size: 2.5rem;
+  text-shadow: 9px 7px 19px rgba(255, 106, 106, 0.575);
+  text-align: left;
+  padding: 10px;
+  border: 5px solid rgba(233, 20, 151, 0.575);
+  background-color: rgb(29, 17, 78);
 }
 
 #p1 {
@@ -32,26 +32,27 @@ body {
 }
 
 .input_container {
-	display: flex;
-	width: 50%;
-	margin: 0 auto;
-	justify-content: space-between;
+  display: flex;
+  width: 50%;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 
-.choose-file, .csv-file {
-	cursor:pointer;
-	border: none;
-	outline: none;
-	padding: 10px;
-	font-size: 20px;
-	border-radius: 10px;
-	-webkit-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.18);
-	box-shadow: 0px 0px 4px 2px rgba(255, 106, 106, 0.3);
-	background-color: rgba(120, 90, 255, 0.931);
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	-ms-border-radius: 10px;
-	-o-border-radius: 10px;
+.choose-file,
+.csv-file {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.18);
+  box-shadow: 0px 0px 4px 2px rgba(255, 106, 106, 0.3);
+  background-color: rgba(120, 90, 255, 0.931);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 .csv-file {
@@ -63,8 +64,8 @@ body {
   display: none;
 }
 
-.link{
-	cursor:pointer;
+.link {
+  cursor: pointer;
 }
 
 span {
@@ -149,7 +150,7 @@ hr {
 }
 
 hr:after {
-  content: "§";
+  content: '§';
   display: inline-block;
   position: relative;
   top: -14px;
@@ -163,7 +164,7 @@ hr:after {
 }
 
 .pure {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
@@ -216,15 +217,17 @@ hr:after {
   display: block;
 }
 
-svg#adjacency_matrix {
+svg#adjacency_matrix,
+svg#graph {
+  margin: 0 6rem;
   border: 0px solid gray;
   background-color: rgba(255, 90, 90, 0.931);
 }
 
-svg#graph {
+/* svg#graph {
   border: 0px solid gray;
   background-color: rgba(255, 90, 90, 0.931);
-}
+} */
 
 g.am-axis text {
   font-size: 8px;
@@ -290,8 +293,11 @@ text {
 }
 
 h2 {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
   color: rgba(255, 90, 90, 0.931);
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 28px;
   font-weight: 400;
   line-height: 32px;
@@ -301,18 +307,15 @@ h2 {
 /* centered download rules and upload,
   small change to myBar */
 @media only screen and (max-width: 768px) {
-  #h1 
-  {
+  #h1 {
     text-align: center;
   }
 
-  .csv-file
-  {
+  .csv-file {
     margin-left: -40px;
   }
 
-  .input_container
-  {
+  .input_container {
     justify-content: space-evenly;
   }
 }
@@ -321,27 +324,22 @@ h2 {
   also Some smaller fonts to fit everything better, 
   small change to myBar */
 @media only screen and (max-width: 320px) {
-  #h1 
-  {
+  #h1 {
     font-size: 2rem;
   }
 
-  .csv-file
-  {
+  .csv-file {
     font-size: 18px;
     text-align: center;
     margin-left: 0px;
     margin-right: 10px;
-    
   }
 
-  .choose-file
-  {
+  .choose-file {
     padding-top: 20px;
   }
 
-  #myBar
-  {
+  #myBar {
     width: 5%;
     padding-left: 2px;
   }
